Updating Graphs performance